# C-plus-learning

./: BubbleSoft.cpp  CMakeLists.txt  Domino_piling.cpp  Fibo.cpp  KTGK_LTLT1.cpp  MergeSoft_novector.cpp  OragneAndApple.cpp  QNUSoDep.cpp  bai9.cpp  boolean.cpp  buildcol.cpp  buildcol.inp  caesar.cpp  checkPrime_dequy.cpp  checksaucondequy.cpp  coin.cpp  coinredem.cpp  cow.cpp  datatype.cpp  demcapv2.cpp  demchuso_dequy.cpp  demsochan.cpp  demxchiadetri.cpp  dequytongptutrongmang.cpp  difference_elements_array.cpp  doanconbang0.cpp  doancontonglonnhat.cpp  doancontonglonnhat_qhd.cpp  doancontongmax.cpp  fib.cpp  findelementbyS.cpp  findmax2nd.cpp  findmaxarray_dequy.cpp  fraction.cpp  fraction.inp  gdc.cpp  giaithua_chiadetri.cpp  hacknaoc++.cpp  haisotrongmangtongbangs.cpp  helloworld.cpp  (+51 more)
.cph/: .Domino_piling.cpp_c56fb40ab0c5016cb9264c859d38d01e.prob  .demcapv2.cpp_b831012bda8164b8ce2468914c0713cd.prob
CSES/: Apartments.cpp  ConcertTickets.cpp  FerrisWheel.cpp  HaNoiTower.cpp  IncreasingArray.cpp  MissingNumber.cpp  NextRound.cpp  PalindromeReorder.cpp  Repetitions.cpp  RestaurantCustomers.cpp  TheatreSquare.cpp  TrailingZeros.cpp  WeirdAlgorithm.cpp  bitsring.cpp  bitstring.cpp  coin.cpp  concerttiker.cpp  graycode.cpp  haitaphop.cpp  kcntt.cpp  pythonfile.cpp  timduongdi.cpp  twoknight.cpp
CSES/.cph/: .NextRound.cpp_b093a5ad67f0edecd5ccc53d7cb97b37.prob
CTDL/: Djika.cpp  Pointer1.cpp  Pointer_swap.cpp  ghepday.cpp  nodeTest.cpp  pointer_test.cpp  references.cpp  studentdata.txt  sumQuery.cpp  testss.cpp
CTDL/.cph/: .Djika.cpp_b9822565c69052766f8e295a8323fc79.prob  .ghepday.cpp_7001e0dfbd12471abb601e2d8e4efbb6.prob  .sumQuery.cpp_3e8b9ce49e0d7879bf2d0647312cb80e.prob
CTDL/BTH/: 7.rar  SinhVien.cpp  studentdata.txt  testArr.cpp  www.facebook.com.url
CTDL/DeThi/: 23_24-1.cpp  DVHanhChinh.cpp  LopHoc.cpp  danhBa.cpp  dataPhone.txt  dscanh.txt  dske.txt  exampleBST.cpp  graph_dsCanh.cpp  graph_dsKe.cpp  graph_mtKe.cpp  mtke.txt
ITQC/: template.cpp  test.cpp  uniquynhon_itqc25_01cuahang.cpp  uniquynhon_itqc25_03ktx.cpp  uniquynhon_itqc25_04tangqua.cpp  uniquynhon_itqc25_05chiabanh.cpp
ITQC/.cph/: .uniquynhon_itqc25_01cuahang.cpp_b113ff046c627cde37db4e8c0d1084de.prob  .uniquynhon_itqc25_03ktx.cpp_4708d2deb8b54a032f2f3806216cf0f6.prob  .uniquynhon_itqc25_04tangqua.cpp_b312f0f9d0f96b259ac2524e81de0227.prob
KTLT/: AVG3NUM.cpp  HocVien.cpp  Knapsack.cpp  M_operations.cpp  MuaVe.cpp  NQueen.cpp  SoNon.cpp  ThoiGian.cpp  age.cpp  anmi.cpp  anmi_remake.cpp  appledivide.cpp  atcoder_dp_b.cpp  atcoder_dp_c.cpp  bacthang.cpp  binary.cpp  calc.cpp  cap.cpp  char.cpp  chia.cpp  chiatao.cpp  chusok.cpp  daytang.cpp  db.cpp  demcap.cpp  description.cpp  ditmethayluyendb.cpp  dm.cpp  dmthayluyen.cpp  docsach.cpp  doiqua.cpp  doiqua1.cpp  doiqua2.cpp  doitien.cpp  dothi.cpp  duongam.cpp  duynhat.cpp  fcb008_maxdiff.cpp  fcb009_tinhtong.cpp  fcb011_mod.cpp  (+71 more)
KTLT/.cph/: .M_operations.cpp_016bca639c65d9c4b33a08e0f1332852.prob  .MuaVe.cpp_a7909eccc07055f54b3fb34bffe2f4a5.prob  .SoNon.cpp_d6c2a7a9b6530d2a4a6e670f2d894a9f.prob  .ThoiGian.cpp_6ad4d8337cd40dfc69abfdab1c11ff45.prob  .calc.cpp_7e93808791b0b5568402e651867986b6.prob  .chiatao.cpp_fe147b7bd84b10bb4a030bb6d8691409.prob  .demcap.cpp_409ef3a6841cfec02c8f291a3e192e59.prob  .dothi.cpp_65b2eac866ed00cbb52d173c4f5fba12.prob  .fcb008_maxdiff.cpp_baacf7155f7711652a7b40a8c5419262.prob  .frog.cpp_d83863232a78413658ccebf7313ce507.prob  .frog2.cpp_9d0ffa5acd44e01caac9ce521967a10d.prob  .ghepso.cpp_6057bb25ce10d6bcf2ec89cb5e5f8c7d.prob  .giongnhau.cpp_70e828a67b151b5b7378f49a53a5284d.prob  .inhoanvi_sinh.cpp_2e620fcae315e51efd9f0a3de5944a5a.prob  .inhoanvilap.cpp_ebd03296d80cbacd5fe3e89957bf2045.prob  .inhvgiam.cpp_3da40a7b57f98ab93e97baca54a0b02a.prob  .laysobenhvien.cpp_5eb0e2a8fd988e42833456327020690b.prob  .lietketohop.cpp_5e80006bfa320bce2675f9ab12be0abe.prob  .qlnv.cpp_f96ad9729a7fe08c8475a7886e9cf423.prob  .thuongxuyen.cpp_e270f4f146da4c757a394ed9e36a5427.prob  (+3 more)
KTLT/template/: template.cpp
codeforces/: 1999A.cpp  231A.cpp  71A.cpp  A.cpp  LIS.cpp  StringTask.cpp  watermelon.cpp  word.cpp
codelearn/: factorSum.cpp  greatestCommonPrimeDivisor.cpp  magicnums.cpp  pso.cpp  sokyla.cpp  stangenum.cpp  thuong.cpp
vnoj/: BinarySearch.cpp  CHAR.cpp  HCN.cpp  M_operations.cpp  QNUGiaiThua.cpp  QNUTimx.cpp  QNU_DAUGIA.cpp  QNU_ThuHang.cpp  QNU_stringAB.cpp  cassia.cpp  chiaqua.cpp  coso.cpp  demchuso1denn.cpp  dulich.cpp  euclid.cpp  gapgiay.cpp  hecoso.cpp  hinhphat.cpp  hoanvidep.cpp  hp_thpt_23_b.cpp  kcntt2.cpp  macro.cpp  muahoa.cpp  ptbac2.cpp  snt.cpp  songto.cpp  sophanbiet.cpp  soxoanoc.cpp  tamgiacvuong.cpp  test.cpp  timeconvert.cpp  tinhtong.cpp  tongdoan.cpp  vithu.cpp  vongtay.cpp  xapxep01.cpp  xemphim.cpp  xeplich.cpp
(+44 files in other folders)
