cmake_minimum_required(VERSION 3.29)
project(C_plus_learning)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_plus_learning
    codeforces/1999A.cpp
    codeforces/231A.cpp
    codeforces/71A.cpp
    codeforces/A.cpp
    codeforces/StringTask.cpp
    codeforces/watermelon.cpp
    codeforces/word.cpp
    codelearn/factorSum.cpp
    codelearn/greatestCommonPrimeDivisor.cpp
    codelearn/magicnums.cpp
    codelearn/pso.cpp
    codelearn/sokyla.cpp
    codelearn/stangenum.cpp
    codelearn/thuong.cpp
    CSES/Apartments.cpp
    CSES/bitsring.cpp
    CSES/bitstring.cpp
    CSES/coin.cpp
    CSES/ConcertTickets.cpp
    CSES/concerttiker.cpp
    CSES/FerrisWheel.cpp
    CSES/graycode.cpp
    CSES/haitaphop.cpp
    CSES/HaNoiTower.cpp
    CSES/IncreasingArray.cpp
    CSES/kcntt.cpp
    CSES/MissingNumber.cpp
    CSES/PalindromeReorder.cpp
    CSES/pythonfile.cpp
    CSES/Repetitions.cpp
    CSES/RestaurantCustomers.cpp
    CSES/TheatreSquare.cpp
    CSES/timduongdi.cpp
    CSES/TrailingZeros.cpp
    CSES/twoknight.cpp
    CSES/WeirdAlgorithm.cpp
    KTLT/age.cpp
    KTLT/anmi.cpp
    KTLT/char.cpp
    KTLT/chusok.cpp
    KTLT/description.cpp
    KTLT/dm.cpp
    KTLT/dmthayluyen.cpp
    KTLT/doiqua.cpp
    KTLT/doiqua1.cpp
    KTLT/doitien.cpp
    KTLT/duongam.cpp
    KTLT/fibo.cpp
    KTLT/fibo_matrix.cpp
    KTLT/fibodequy.cpp
    KTLT/gapgiay.cpp
    KTLT/giaithua.cpp
    KTLT/hcn.cpp
    KTLT/hecoso.cpp
    KTLT/helloc.cpp
    KTLT/hp_thpt_23_a.cpp
    KTLT/k46e.cpp
    KTLT/k46e2.cpp
    KTLT/lailamubon.cpp
    KTLT/lt.cpp
    KTLT/luythua.cpp
    KTLT/mubon.cpp
    KTLT/overview_1.cpp
    KTLT/overview_2.cpp
    KTLT/phanloaidochoi.cpp
    KTLT/phuongtrinhbacnhat.cpp
    KTLT/pointer.cpp
    KTLT/power.cpp
    KTLT/sample.cpp
    KTLT/sole.cpp
    KTLT/soluongchucai.cpp
    KTLT/songto.cpp
    KTLT/tamgiacsao.cpp
    KTLT/test.cpp
    KTLT/test_getline.cpp
    KTLT/testtt55.cpp
    KTLT/tich.cpp
    KTLT/tiendien.cpp
    KTLT/timeconvert.cpp
    KTLT/tinhtong.cpp
    KTLT/toigian.cpp
    KTLT/tongchuso.cpp
    KTLT/tonghieutich.cpp
    KTLT/tongnguoc.cpp
    KTLT/xoaymang.cpp
    KTLT/xoaymang1.cpp
    KTLT/xulichuoiso.cpp
    vnoj/BinarySearch.cpp
    vnoj/cassia.cpp
    vnoj/chiaqua.cpp
    vnoj/coso.cpp
    vnoj/demchuso1denn.cpp
    vnoj/dulich.cpp
    vnoj/euclid.cpp
    vnoj/gapgiay.cpp
    vnoj/HCN.cpp
    vnoj/hecoso.cpp
    vnoj/hinhphat.cpp
    vnoj/hoanvidep.cpp
    vnoj/hp_thpt_23_b.cpp
    vnoj/kcntt2.cpp
    vnoj/M_operations.cpp
    vnoj/macro.cpp
    vnoj/muahoa.cpp
    vnoj/ptbac2.cpp
    vnoj/QNU_DAUGIA.cpp
    vnoj/QNU_stringAB.cpp
    vnoj/QNU_ThuHang.cpp
    vnoj/QNUGiaiThua.cpp
    vnoj/QNUTimx.cpp
    vnoj/snt.cpp
    vnoj/songto.cpp
    vnoj/sophanbiet.cpp
    vnoj/soxoanoc.cpp
    vnoj/tamgiacvuong.cpp
    vnoj/test.cpp
    vnoj/timeconvert.cpp
    vnoj/tinhtong.cpp
    vnoj/tongdoan.cpp
    vnoj/vithu.cpp
    vnoj/vongtay.cpp
    vnoj/xapxep01.cpp
    vnoj/xemphim.cpp
    vnoj/xeplich.cpp
    bai9.cpp
    boolean.cpp
    BubbleSoft.cpp
    buildcol.cpp
    caesar.cpp
    checkPrime_dequy.cpp
    checksaucondequy.cpp
    coin.cpp
    coinredem.cpp
    cow.cpp
    datatype.cpp
    demchuso_dequy.cpp
    demsochan.cpp
    demxchiadetri.cpp
    dequytongptutrongmang.cpp
    difference_elements_array.cpp
    doanconbang0.cpp
    doancontonglonnhat.cpp
    doancontonglonnhat_qhd.cpp
    doancontongmax.cpp
    fib.cpp
    Fibo.cpp
    findelementbyS.cpp
    findmax2nd.c
    findmax2nd.cpp
    findmaxarray_dequy.cpp
    fraction.cpp
    gdc.cpp
    giaithua_chiadetri.cpp
    hacknaoc++.cpp
    haisotrongmangtongbangs.cpp
    helloworld.cpp
    helloworld1.cpp
    hihi.cpp
    input_output.cpp
    kiemtramangxeptang.cpp
    ktramangdx.cpp
    lis.cpp
    mangdoixung.cpp
    maptest.cpp
    maxsubarray_dm.cpp
    mergesoft.cpp
    MergeSoft_novector.cpp
    min_max.cpp
    minsubarray_dp.cpp
    ngiaithua.cpp
    nhanmatran.cpp
    onofsqlserver.cpp
    OragneAndApple.cpp
    output.cpp
    perfectnum.cpp
    phanhoach.cpp
    phantudaso.cpp
    prime_n.cpp
    pyramid.cpp
    QNUSoDep.cpp
    quicksort.cpp
    recentx.cpp
    sapxemchucai.cpp
    sochiahet.cpp
    sohoanthienlonnhattrongmang.cpp
    solonnhi.cpp
    songhichthe.cpp
    songuoc.cpp
    songuyento.cpp
    sosanhnoifelse.cpp
    test.cpp
    test2.cpp
    testeee.cpp
    testsort.cpp
    teststring.cpp
    testtt.cpp
    timi.cpp
    timmangcon.cpp
    timmaxchiadetri.cpp
    timsonhothuk.cpp
    timxmanga.cpp
    tinhchapkn.cpp
    tinhckn.cpp
    tinhn!!_dequy.cpp
    tongdoancon.cpp
    tronmangab.cpp
    tronmangtanggiam.cpp
    Untitled1.c
    uochaiso.cpp
    uocso.cpp
    vector.cpp)
